[package]
name = "xcm-primitives"
version = "0.0.1"
edition = "2021"

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.40" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.40" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.40" }

[features]
default = [ "std" ]
std = [
    "sp-std/std",
    "frame-support/std",
    "xcm/std",
    "xcm-executor/std"
]
