[package]
name = "xcm-primitives"
version = "0.0.1"
edition = "2021"

[dependencies]
sp-std = { workspace = true , version = "10.0.0" }
frame-support = { workspace = true , version = "23.0.0" }
sp-runtime = { workspace = true , version = "26.0.0" }


xcm = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = [ "std" ]
std = [
    "sp-std/std",
    "frame-support/std",
    "sp-runtime/std",
    "xcm/std",
    "xcm-executor/std"
]
