[package]
name = "stout-runtime"
version = "1.0.0"
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true , version = "12.0.0" }

[dependencies]
hex-literal = { workspace = true, optional = true , version = "0.3.4" }
parity-scale-codec = { workspace = true, features = ["derive"] , version = "3.6.4" }
log = { workspace = true , version = "0.4.20" }
scale-info = { workspace = true , version = "2.9.0" }
serde = { workspace = true, optional = true , version = "1.0.188" }
smallvec = { workspace = true , version = "1.11.0" }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { workspace = true , version = "21.0.0" }
sp-block-builder = { workspace = true , version = "21.0.0" }
sp-consensus-aura = { workspace = true , version = "0.27.0" }
sp-core = { workspace = true , version = "23.0.0" }
sp-inherents = { workspace = true , version = "21.0.0" }
sp-io = { workspace = true , version = "25.0.0" }
sp-offchain = { workspace = true , version = "21.0.0" }
sp-runtime = { workspace = true , version = "26.0.0" }
sp-session = { workspace = true , version = "22.0.0" }
sp-std = { workspace = true , version = "10.0.0" }
sp-transaction-pool = { workspace = true , version = "21.0.0" }
sp-version = { workspace = true , version = "24.0.0" }

## Substrate FRAME Dependencies
frame-benchmarking = { workspace = true, optional = true , version = "23.0.0" }
frame-try-runtime = { workspace = true, optional = true , version = "0.29.0" }
frame-executive = { workspace = true , version = "23.0.0" }
frame-support = { workspace = true , version = "23.0.0" }
frame-system = { workspace = true , version = "23.0.0" }
frame-system-benchmarking = { workspace = true, optional = true , version = "23.0.0" }
frame-system-rpc-runtime-api = { workspace = true , version = "21.0.0" }

## Substrate Pallet Dependencies
pallet-assets = { workspace = true , version = "24.0.0" }
pallet-asset-tx-payment = { workspace = true , version = "23.0.0" }
pallet-aura = { workspace = true , version = "22.0.0" }
pallet-authorship = { workspace = true , version = "23.0.0" }
pallet-balances = { workspace = true , version = "23.0.0" }
pallet-collective = { workspace = true , version = "23.0.0" }
pallet-contracts = { workspace = true , version = "22.0.0" }
pallet-contracts-primitives = { workspace = true , version = "26.0.0" }
pallet-identity = { workspace = true , version = "23.0.0" }
pallet-multisig = { workspace = true , version = "23.0.0" }
pallet-preimage = { workspace = true , version = "23.0.0" }
pallet-insecure-randomness-collective-flip = { workspace = true , version = "11.0.0" }
pallet-session = { workspace = true , version = "23.0.0" }
pallet-scheduler = { workspace = true , version = "24.0.0" }
pallet-sudo = { workspace = true , version = "23.0.0" }
pallet-timestamp = { workspace = true , version = "22.0.0" }
pallet-transaction-payment = { workspace = true , version = "23.0.0" }
pallet-transaction-payment-rpc-runtime-api = { workspace = true , version = "23.0.0" }
pallet-uniques = { workspace = true , version = "23.0.0" }
pallet-utility = { workspace = true , version = "23.0.0" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { workspace = true , version = "0.2.0" }
cumulus-pallet-dmp-queue = { workspace = true , version = "0.2.0" }
cumulus-pallet-parachain-system = { workspace = true , version = "0.2.0" }
cumulus-pallet-xcm = { workspace = true , version = "0.2.0" }
cumulus-pallet-xcmp-queue = { workspace = true , version = "0.2.0" }
cumulus-ping = { workspace = true , version = "0.2.0" }
cumulus-primitives-core = { workspace = true , version = "0.2.0" }
cumulus-primitives-timestamp = { workspace = true , version = "0.2.0" }
cumulus-primitives-utility = { workspace = true , version = "0.2.0" }
pallet-collator-selection = { workspace = true , version = "4.0.0" }
parachains-common = { workspace = true , version = "2.0.0" }
parachain-info = { workspace = true }
cumulus-pallet-session-benchmarking = { workspace = true , version = "4.0.0" }

# Polkadot Dependencies
kusama-runtime-constants = { workspace = true , version = "2.0.0" }
pallet-xcm = { workspace = true , version = "2.0.0" }
polkadot-core-primitives = { workspace = true , version = "2.0.0" }
polkadot-parachain-primitives = { workspace = true , version = "1.0.0" }
polkadot-runtime-common = { workspace = true , version = "2.0.0" }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
xcm-primitives = { workspace = true }
pallet-xcm-benchmarks = { workspace = true, optional = true , version = "2.0.0" }

# External Pallets
pallet-dex = { workspace = true }
pallet-dex-rpc-runtime-api = { workspace = true }
pallet-asset-registry = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-assets/std",
	"pallet-asset-tx-payment/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-dex/std",
	"pallet-dex-rpc-runtime-api/std",
	"pallet-identity/std",
	"pallet-multisig/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-ping/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-dmp-queue/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std"
]
runtime-benchmarks = [
	"hex-literal",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-asset-registry/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-dex/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
]
