[package]
name = "trappist-runtime"
version = "1.0.0"
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
hex-literal = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
log = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
smallvec = { workspace = true }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-weights = { workspace = true }

## Substrate FRAME Dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }

## Substrate Pallet Dependencies
pallet-asset-conversion = { workspace = true }
pallet-assets = { workspace = true }
pallet-asset-tx-payment = { workspace = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-collective = { workspace = true }
pallet-contracts = { workspace = true }
pallet-contracts-primitives = { workspace = true }
pallet-democracy = { workspace = true }
pallet-identity = { workspace = true }
pallet-multisig = { workspace = true }
pallet-preimage = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-session = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-uniques = { workspace = true }
pallet-utility = { workspace = true }
pallet-treasury = { workspace = true }

# Cumulus dependencies
assets-common = { workspace = true }
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-ping = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
pallet-collator-selection = { workspace = true }
parachains-common = { workspace = true }
parachain-info = { workspace = true }
cumulus-pallet-session-benchmarking = { workspace = true }

# Polkadot Dependencies
kusama-runtime-constants = { workspace = true }
pallet-xcm = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
xcm-primitives = { workspace = true }
pallet-xcm-benchmarks = { workspace = true, optional = true }

# Trappist Pallets
pallet-asset-registry = { workspace = true }
trappist-runtime-benchmarks = { workspace = true }
pallet-withdraw-teleport = { workspace = true }
pallet-safe-mode = { workspace = true }
pallet-tx-pause = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"serde",
	"scale-info/std",
	"log/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-weights/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-try-runtime?/std",
	"pallet-asset-conversion/std",
	"pallet-assets/std",
	"pallet-asset-tx-payment/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-collective/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-democracy/std",
	"pallet-identity/std",
	"pallet-safe-mode/std",
	"pallet-tx-pause/std",
	"pallet-preimage/std",
	"pallet-withdraw-teleport/std",
	"pallet-multisig/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-uniques/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"assets-common/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-ping/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-dmp-queue/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std"
]
runtime-benchmarks = [
	"hex-literal",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"trappist-runtime-benchmarks/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-asset-registry/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"trappist-runtime-benchmarks/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-safe-mode/runtime-benchmarks",
	"pallet-tx-pause/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-withdraw-teleport/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"pallet-xcm-benchmarks/runtime-benchmarks",
	"assets-common/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-asset-conversion/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-asset-registry/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-democracy/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-safe-mode/try-runtime",
	"pallet-tx-pause/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-uniques/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"parachain-info/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-session/try-runtime",
	"pallet-aura/try-runtime",
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-asset-tx-payment/try-runtime",
	"pallet-withdraw-teleport/try-runtime",
]
